@@ -6,6 +6,8 @@ documents those changes that are of interest to users and admins.
  -- Change format of Duration field in "scontrol show reservation" output from
     an integer number of minutes to "[days-]hours:minutes:seconds".
  -- Add support for changing the reservation of pending or running jobs.
+ -- On Cray systems only, salloc sends SIGKILL to spawned process group when
+    job allocation is revoked. Patch from Gerrit Renker, CSCS.
 
 * Changes in SLURM 2.2.0.rc4
 ============================
